# gpu-scraper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contrib/: DEPLOYMENT.md  gpu-scraper.service
gpu_scraper/: __init__.py  __main__.py  backends.py  cli.py  discovery.py  models.py  prometheus.py  service.py
tests/: test_backends.py  test_discovery.py  test_prometheus.py  test_service.py
tests/fixtures/intel/: stream.json
