[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-scraper"
dynamic = ["version"]
description = "Prometheus GPU metrics exporter for Intel, AMD, and NVIDIA GPUs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Codex"}]

[project.scripts]
gpu-scraper = "gpu_scraper.cli:main"

[tool.setuptools.dynamic]
version = {attr = "gpu_scraper.__version__"}

[tool.setuptools.packages.find]
include = ["gpu_scraper*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
